--- a/Giralt_Onrubia_doc.tex
+++ b/Giralt_Onrubia_doc.tex
@@ -88,7 +88,9 @@ Josep Pon Farreny
 	\subsection{K-Means Cluster}
 
 \section{Avaluació Experimental}
-	\begin{table}[!h]
+
+%Categorical
+\begin{table}[!h]
 \begin{minipage}[b]{0.4\linewidth}
 \centering
 \resizebox{9cm}{!}{
@@ -112,6 +114,64 @@ Percentatge TrainSet & Percentatge Good 	\\\hline
 \centering
 \includegraphics[width=1.2\linewidth]{Images/bridge.png}
 \captionof{figure}{Gràfica per al test de les variables de tipus categoria}
+\label{fig:astar}
+ \end{minipage}
+\end{table}
+
+%Integer
+\begin{table}[!h]
+\begin{minipage}[b]{0.4\linewidth}
+\centering
+\resizebox{9cm}{!}{
+\begin{tabular}{|c|c|}\hline
+Percentatge TrainSet & Percentatge Good 	\\\hline
+0.1	 & 	47.12	 \\\hline
+0.2	 & 	47.74	 \\\hline
+0.3	 & 	44.85	 \\\hline
+0.4	 & 	48.27	 \\\hline
+0.5	 & 	50.51	 \\\hline
+0.6	 & 	50.0	 \\\hline
+0.7	 & 	56.89	 \\\hline
+0.8	 & 	56.41	 \\\hline
+0.9	 & 	50.0	 \\\hline
+\end{tabular}
+}
+\caption{Taula per al test de les variables de tipus enter}
+\label{tab:astartable}
+\end{minipage}\hfill
+\begin{minipage}[b]{0.4\linewidth}
+\centering
+\includegraphics[width=1.2\linewidth]{Images/flag.png}
+\captionof{figure}{Gràfica per al test de les variables de tipus enter}
+\label{fig:astar}
+ \end{minipage}
+\end{table}
+
+%Boolean
+\begin{table}[!h]
+\begin{minipage}[b]{0.4\linewidth}
+\centering
+\resizebox{9cm}{!}{
+\begin{tabular}{|c|c|}\hline
+Percentatge TrainSet & Percentatge Good 	\\\hline
+0.1	 & 	47.12	 \\\hline
+0.2	 & 	47.74	 \\\hline
+0.3	 & 	44.85	 \\\hline
+0.4	 & 	48.27	 \\\hline
+0.5	 & 	50.51	 \\\hline
+0.6	 & 	50.0	 \\\hline
+0.7	 & 	56.89	 \\\hline
+0.8	 & 	56.41	 \\\hline
+0.9	 & 	50.0	 \\\hline
+\end{tabular}
+}
+\caption{Taula per al test de les variables de tipus enter}
+\label{tab:astartable}
+\end{minipage}\hfill
+\begin{minipage}[b]{0.4\linewidth}
+\centering
+\includegraphics[width=1.2\linewidth]{Images/flag.png}
+\captionof{figure}{Gràfica per al test de les variables de tipus enter}
 \label{fig:astar}
  \end{minipage}
 \end{table}
