--- a/Giralt_Onrubia_doc.tex
+++ b/Giralt_Onrubia_doc.tex
@@ -154,25 +154,56 @@ Percentatge TrainSet & Percentatge Good 	\\\hline
 \resizebox{9cm}{!}{
 \begin{tabular}{|c|c|}\hline
 Percentatge TrainSet & Percentatge Good 	\\\hline
-0.1	 & 	47.12	 \\\hline
-0.2	 & 	47.74	 \\\hline
-0.3	 & 	44.85	 \\\hline
-0.4	 & 	48.27	 \\\hline
-0.5	 & 	50.51	 \\\hline
-0.6	 & 	50.0	 \\\hline
-0.7	 & 	56.89	 \\\hline
-0.8	 & 	56.41	 \\\hline
-0.9	 & 	50.0	 \\\hline
+0.1	 & 	61.12	 \\\hline
+0.2	 & 	59.15	 \\\hline
+0.3	 & 	66.12	 \\\hline
+0.4	 & 	68.07	 \\\hline
+0.5	 & 	68.92	 \\\hline
+0.6	 & 	66.90	 \\\hline
+0.7	 & 	69.15	 \\\hline
+0.8	 & 	69.01	 \\\hline
+0.9	 & 	66.66	 \\\hline
 \end{tabular}
 }
-\caption{Taula per al test de les variables de tipus enter}
+\caption{Taula per al test de les variables de tipus boolean}
 \label{tab:astartable}
 \end{minipage}\hfill
 \begin{minipage}[b]{0.4\linewidth}
 \centering
-\includegraphics[width=1.2\linewidth]{Images/flag.png}
-\captionof{figure}{Gràfica per al test de les variables de tipus enter}
+\includegraphics[width=1.2\linewidth]{Images/votes.png}
+\captionof{figure}{Gràfica per al test de les variables de tipus boolean}
 \label{fig:astar}
  \end{minipage}
 \end{table}
+
+%Mix
+\begin{table}[!h]
+\begin{minipage}[b]{0.4\linewidth}
+\centering
+\resizebox{9cm}{!}{
+\begin{tabular}{|c|c|}\hline
+Percentatge TrainSet & Percentatge Good 	\\\hline
+0.1	 & 	13.33	 \\\hline
+0.2	 & 	15.38	 \\\hline
+0.3	 & 	33.33	 \\\hline
+0.4	 & 	50.0	 \\\hline
+0.5	 & 	12.5	 \\\hline
+0.6	 & 	42.85	 \\\hline
+0.7	 & 	40.0	 \\\hline
+0.8	 & 	75.0	 \\\hline
+0.9	 & 	100.0	 \\\hline
+\end{tabular}
+}
+\caption{Taula per al test de diferents tipus de variables}
+\label{tab:astartable}
+\end{minipage}\hfill
+\begin{minipage}[b]{0.4\linewidth}
+\centering
+\includegraphics[width=1.2\linewidth]{Images/votes.png}
+\captionof{figure}{Gràfica per al test de diferents tipus de variables}
+\label{fig:astar}
+ \end{minipage}
+\end{table}
+
+\section{Conclusions}
 \end{document}
