--- a/Giralt_Onrubia_doc.tex
+++ b/Giralt_Onrubia_doc.tex
@@ -199,7 +199,7 @@ Percentatge TrainSet & Percentatge Good 	\\\hline
 \end{minipage}\hfill
 \begin{minipage}[b]{0.4\linewidth}
 \centering
-\includegraphics[width=1.2\linewidth]{Images/votes.png}
+\includegraphics[width=1.2\linewidth]{Images/mix.png}
 \captionof{figure}{Gràfica per al test de diferents tipus de variables}
 \label{fig:astar}
  \end{minipage}
