--- a/Giralt_Onrubia_doc.tex
+++ b/Giralt_Onrubia_doc.tex
@@ -88,7 +88,7 @@ Josep Pon Farreny
 	\subsection{K-Means Cluster}
 
 \section{Avaluació Experimental}
-
+Per la elaboració del procés experimental, hem creat i buscat uns jocs de proves. Tenim un joc de proves on majoritariament tenim variables de tipus categoria, després tenim un altre on majoritariament les variables són de tipus enter i un altre joc de proves amb variables de tipus boolea. També tenim un joc de proves amb multiples tipus de variables que ja l'hem estudiat a classe.
 %Categorical
 \begin{table}[!h]
 \begin{minipage}[b]{0.4\linewidth}
