--- a/Giralt_Onrubia_doc.tex
+++ b/Giralt_Onrubia_doc.tex
@@ -81,12 +81,12 @@ Josep Pon Farreny
 \newpage
 \section{Decisions de disseny}
 	\subsection{Tree Predict}
-		En aquest document és on hem hagut d'implementar més funcions per la pràctica. En primer lloc, hem implementat les funcions \textbf{buildTree} i \textbf{buildTreeIterative}, que són les funcions encarregades de muntar l'arbre a partir de les dades d'entrada. La funció buildtree rep d'entrada un conjunt de dades i les divideix en columnes segons la impuresa, ja que a més decrement, millor són els subconjunts. Aquesta impuresa ve donada a l'utilitzar la funció amb les funcions de l'índex de Gini o l'Entropia. El resultat d'aquesta funció és un arbre amb les seves branques verdader i fals on es mostra el resultat de les preguntes realitzades. En la versió iterativa de l'algoritme hem aplicat els coneixements adquirits en l'assignatura d'Algorítmica i Complexitat on ens explicaven que un dels mètodes per passar una funció recursiva a iterativa era la utilització de piles per simular les crides recursives. És per això que hem implementat la nostra pròpia pila per fer aquesta funció. Una altra funció que hem hagut d'implementar és la funció \textbf{classifier} que consisteix en donat unes característiques i un arbre, ens dóna l'atribut que volem cercar. Aquesta funció la farem servir amb la funció de \textbf{testPerformance} que donat dos sets de característiques, entrenem un arbre amb el \textit{trainingSet} i per cada conjunt de característiques del \textit{testSet} cridem a l'anterior funció esmentada i comprovem si ens dóna l'argument correcte. Amb aquesta funció i amb funcions auxiliars és com hem pogut realitzar l'avaluació experimental.
+		En aquest document és on hem hagut d'implementar més funcions per la pràctica. En primer lloc, hem implementat les funcions \textbf{buildTree} i \textbf{buildTreeIterative}, que són les funcions encarregades de muntar l'arbre a partir de les dades d'entrada. La funció buildtree rep d'entrada un conjunt de dades i les divideix en columnes segons la impuresa, ja que a més decrement, millor són els subconjunts. Aquesta impuresa ve donada a l'utilitzar la funció amb les funcions de l'índex de Gini o l'Entropia. El resultat d'aquesta funció és un arbre amb les seves branques verdader i fals on es mostra el resultat de les preguntes realitzades. En la versió iterativa de l'algoritme hem aplicat els coneixements adquirits en l'assignatura d'Algorítmica i Complexitat on ens explicaven que un dels mètodes per passar una funció recursiva a iterativa era la utilització de piles per simular les crides recursives. És per això que hem implementat la nostra pròpia pila per fer aquesta funció. Una altra funció que hem hagut d'implementar és la funció \textbf{classifier} que consisteix en donat unes característiques i un arbre, ens dóna l'atribut que volem cercar. Aquesta funció la farem servir amb la funció de \textbf{testPerformance} que donat dos sets de característiques, entrenem un arbre amb el \textit{trainingSet} i per cada conjunt de característiques del \textit{testSet} cridem a l'anterior funció esmentada i comprovem si ens dóna l'argument correcte. Amb aquesta funció i amb funcions auxiliars és com hem pogut realitzar l'avaluació experimental. Per acabar, hem realitzat la funció \textbf{prune}. Aquesta funció és molt important quan tenim arbres que estan massa entrenats. Quan ens trobem en aquesta situació, pot baixar el rendiment del nostre arbre i per tant que les solucions que ens doni la funció classify sigui gairebé sempre errònia. Per fer això, per cada parell de nodes que tinguin el mateix pare, comprova si ajuntant-los obtindria un major decrement de la impuresa. Així podrem evitar que les prediccions que faci l'arbre siguin menys equivocades.
 		
 	\subsection{Bayesian Learning}
-		
+		En aquest arxiu, el qual hem realitzat la major part en les classes de laboratori de l'assignatura,  està implementat un altre tipus de mètode d'aprenentatge supervisat. Aquest mètode, com he dit abans, a la vida real l'usen servidors de correu per implementar el seu filtre anti SPAM. En la pràctica, hem hagut de implementar la classe Naive Bayes i les seves funcions. Hem hagut de realitzar la funció \textbf{prob }i la funció \textbf{classify}. La funció prob la vam deixar a mitges a classe. Vam haver d'implementar el docprob que es una funció que mirava la quantitat de vegades que sortia un item en una categoria concreta. Tenint això i multiplicant-ho per catprob, funció ja implementada, ens computava la probabilitat d'una categoria sobre un item gràcies al teorema de Bayes: Màxim a Posteriori (MAP). L'altra funció que vam implementar va ser, com he dit, el classify que ens retorna la categoria on hauria d'estar aquell item o la categoria per defecte per quan no pot determinar-ho. Per fer aixo, calculavam la probabilitat d'una categoria sobre un item per totes les categories i ens quedàvem amb el millor resultat. Després comprovàvem que el valor de la categoria més alta que ens havia donat, superes el valor de les altres multiplicat per el \textit{threshold}. En cas que no fos així retornarem la categoria per defecte.
 	\subsection{K-Means Cluster}
-
+		Aquest tipus de mètode d'aprenentatge no supervisat ens retorna un arbre, com en els anteriors casos, però amb una serie de desavantatges com seria el alt còmput i que no acaba de separar del tot bé les dades entre si. Tenim una serie de valors representats en 2 dimensions i una serie de clusters. Aquests valors s'ajunten al cluster que tenen més aprop segons la seva distància euclideana ja implementada en el arxiu. Quan s'han afegit a un cluster, el cluster es posiciona en una posició mitja per a tots els valors. Si cap valor troba un cluster més aprop, s'estabilitza. Si no es així es van repetint els passos fins que s'arriba en una situació de calma.  
 \section{Avaluació Experimental}
 Per la elaboració del procés experimental, hem creat i buscat uns jocs de proves. Tenim un joc de proves on majoritariament tenim variables de tipus categoria, després tenim un altre on majoritariament les variables són de tipus enter i un altre joc de proves amb variables de tipus boolea. També tenim un joc de proves amb multiples tipus de variables que ja l'hem estudiat a classe.
 %Categorical
@@ -204,6 +204,7 @@ Percentatge TrainSet & Percentatge Good 	\\\hline
 \label{fig:astar}
  \end{minipage}
 \end{table}
-
+\newpage\newpage\newpage
 \section{Conclusions}
+Després de efectuar aquesta avaluació experimental, podem analitzar amb quines variables el arbre de decisió funciona millor. En primer lloc podem veure que amb variables de categoria, la predicció millora com més informació té l'arbre incremental-ment. En canvi, podem veure que el gràfic amb variables booleanes incrementa exponencialment i és més estable que qualsevol altre. També podem extreure d'aquesta activitat empírica que els arbres amb variables de tipus enter o real, és a dir numèriques, són més difícils de preveure i per tant d'encertar. Els jocs de proves no tenen gaires valors, això també fa que les prediccions siguin més difícils i que si en falla una de predicció baixi més ràpid el rati d'encerts.També podem destacar que en el joc de proves on tenim variables de tots els tipus és molt volàtil ja que al haver poques dades ens surten resultats que no segueixen una línia però clarament, quan més entrenem a una maquina amb valors correctes i bons, la màquina preveurà millor sempre i quan els resultats no siguin sempre molts semblants ja que sinó haurem de fer prunning en el arbre.
 \end{document}
